# device_manager

./: .gitignore  README.md  device_actions.py  device_info.py  device_manager.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
connection/: adb_connection_discovery.py  adb_pairing.py  connection_manager.py  device_connection.py
connection/utils/: connection_status.py  mdns_context.py  mdns_listener.py  service_info.py
device_manager/: __init__.py  adb_executor.py  device_actions.py  device_info.py  device_manager.py  device_orchestrator.py  main.py  manager.py  manager_singleton.py
device_manager/action_modules/: camera_actions.py
device_manager/actions/: camera_actions.py
device_manager/asyncio/: async_adb_pairing.py  async_mdns_listener.py  async_zeroconf.py
device_manager/components/: manager.py  object_manager.py
device_manager/connection/: adb_connection_discovery.py  adb_pairing.py  connection_manager.py  device_connection.py
device_manager/connection/components/: manager.py
device_manager/connection/utils/: connection_status.py  mdns_context.py  mdns_listener.py  service_info.py
device_manager/enumerations/: adb_keyevents.py  camera.py
device_manager/exceptions/: __init__.py  dependency_not_found_error.py  dependency_version_error.py
device_manager/infos/: app.py
device_manager/utils/: dm_warnings.py  qrcode.py  util_functions.py
docs/: index.md  usage.md
docs/code/: code_index.md  connection.md
docs/stylesheets/: extra.css
tests/: test_manager.py  test_manager_singleton.py
tests/connection/: conftest.py  test_adbconnectiondiscovery.py
tests/connection/components/: test_manager.py
tests/connection/utils/: test_mdnslistener.py  test_mdsncontext.py
tests/utils/: test_util_functions.py  test_warnings.py
