[tool.poetry]
name = "device_manager"
version = "0.1.0"
description = ""
authors = ["Bruno Pinheiro <bopj@softex.cin.ufpe.br>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE v3.0"
readme = "README.md"
packages = [
    { include = "device_manager" },
]

[tool.poetry.dependencies]
python = "^3.11"
zeroconf = "^0.140.1"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
qrcode = "^8.0"
uiautomator2 = "^3.2.8"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "4.0.1"
taskipy = "^1.14.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov=device_manager --cov-report=term-missing"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
